function to add a new task in main.js

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                 <ul class="task__list" id="list">
                     <li class="task__item">
                         <div class="task__block">
-                            <input type="checkbox" class="task__checkbox" data-action="checkbox">
+                            <input type="checkbox" class="task__checkbox" data-action="done">
                             <p class="task__text">hello gadji</p>
                         </div>
                         <div class="setting">
                             <button class="task__remove">delete</button>
-                            <input type="checkbox" id="favorites">
+                            <input type="checkbox" data-action="favorites">
                         </div>
                     </li>
                     <li class="task__item">
                         <div class="task__block">
-                            <input type="checkbox" class="task__checkbox" data-action="checkbox">
+                            <input type="checkbox" class="task__checkbox" data-action="done">
                             <p class="task__text">hello gadji</p>
                         </div>
                         <div class="setting">
                             <button class="task__remove">delete</button>
-                            <input type="checkbox" id="favorites">
+                            <input type="checkbox" data-action="favorites">
                         </div>
                     </li>
                 </ul>
