added change for text in main.js

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li class="task__item">
                         <div class="task__block">
                             <input type="checkbox" class="task__checkbox" data-action="done">
-                            <p class="task__text">hello gadji</p>
+                            <p class="task__text" data-action="taskText">hello gadji</p>
                         </div>
                         <div class="setting">
                             <button class="task__remove">delete</button>
