add change text from task

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section>
             <div class="container">
                 <ul class="task__list" id="list">
-                    <li class="task__item">
+                    <!--  <li class="task__item">
                         <div class="task__block">
                             <input type="checkbox" class="task__checkbox" data-action="done">
                             <p class="task__text" data-action="taskText">hello gadji</p>
@@ -54,17 +54,7 @@
                             <button class="task__remove">delete</button>
                             <input type="checkbox" data-action="favorites">
                         </div>
-                    </li>
-                    <li class="task__item">
-                        <div class="task__block">
-                            <input type="checkbox" class="task__checkbox" data-action="done">
-                            <p class="task__text">hello gadji</p>
-                        </div>
-                        <div class="setting">
-                            <button class="task__remove">delete</button>
-                            <input type="checkbox" data-action="favorites">
-                        </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </section>
