--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                         <button class="header__list-item header__list-item__active" data-card="all">All</button>
                     </li>
                     <li>
-                        <button class="header__list-item" data-card="delete">Deleted</button> 
+                        <button class="header__list-item" data-card="deleted">Deleted</button> 
                     </li>
                     <li>
-                        <button class="header__list-item" data-card="favorite">Favorites</button> 
+                        <button class="header__list-item" data-card="favorites">Favorites</button> 
                     </li>
                 </ul>
             </nav>
